--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,32 @@
     transform: rotate(360deg);
   }
 }
+
+/** Nav menu BG color change code **/
+nav.navbar.navbar-expand-lg.bg-body-tertiary
+{
+  background-color: #333  !important;
+}
+.mb-0 {
+  color: white !important;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #04AA6D;
+}
+.container {
+  margin-top: 3.75rem !important;
+}
