--- a/src/App.css
+++ b/src/App.css
@@ -75,8 +75,8 @@ li a:hover {
 }
 .custome-name
 {
-  background-color: #0d6efd;
   padding: 7px;
   display: inline;
-  color: #ffffff;
+  color: #0d6efd;
+  font-weight: bold;
 }
